@@ -1,6 +1,4 @@
-FROM openjdk:8-jdk-slim
-ENV PORT 8080
+FROM scratch
 EXPOSE 8080
-COPY build/libs/*.jar /opt/app.jar
-WORKDIR /opt
-CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "app.jar"]
+ENTRYPOINT ["/pipelineApp"]
+COPY ./bin/ /
